cmake_minimum_required(VERSION 3.0.0)
project(thread_example VERSION 0.1.0 LANGUAGES C CXX)

include(CTest)
enable_testing()

include_directories(${PROJECT_SOURCE_DIR}/include)
include_directories(${PROJECT_SOURCE_DIR})
include_directories(${PROJECT_SOURCE_DIR}/util)
include_directories(${PROJECT_SOURCE_DIR}/monitoring)

add_library(option src/options.cc)
add_library(env src/env_posix.cc)
add_library(thread_pool util/thread_pool.cc)
add_library(thread_util util/thread_util.cc)
add_library(thread_status monitoring/thread_status_updater.cc)
target_link_libraries(thread_pool INTERFACE thread_util pthread)
target_link_libraries(option INTERFACE env)
target_link_libraries(env INTERFACE thread_pool thread_status)
add_executable(thread_example main.cpp)
target_link_libraries(thread_example option env )
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
